--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="py-sm-3 d-flex navbar-expand-lg navbar-light position-fixed">
         <div class="container">
           <a class="navbar-brand" href="#"><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2F6%2F69%2FAirbnb_Logo_B%25C3%25A9lo.svg%2F640px-Airbnb_Logo_B%25C3%25A9lo.svg.png&f=1&nofb=1" alt="Airbnb logo" width="100px"></a>
         </div>
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link d-flex" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <i class="fas fa-globe"></i>
                             <i class="fas fa-chevron-down"></i>
                         </a>
@@ -53,9 +53,9 @@
         </div>
     </nav>
     <hr/>
-    <div class="row">
+    <div class="row mt-5">
         <div class="col-8">
-            <div class="container ml-sm-3 mt-sm-5" >
+            <div class="container ml-sm-6 mt-5" >
             <p>Mais de 300 acomodações · 9 de mai. - 10 de mai. · 1 hóspede</p>
             <h1>Acomodações </h1>
 
@@ -75,7 +75,7 @@
             </div>
             
         </div>
-        <div class="col-4">col-4</div>
+        <div class="col-4 mt-5" id="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.1216123119816!2d-46.6546248853838!3d-23.564075367576823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c7dc4a061d%3A0x8d224b65e65c4471!2sAv.%20Paulista%2C%201100%20-%20Bela%20Vista%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001310-100!5e0!3m2!1spt-BR!2sbr!4v1589153742671!5m2!1spt-BR!2sbr" width="400" height="500px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
     </div>
 
 </body>
